test/spec_vectors/simd_i32x4_arith/fail/module_1.wat
(module (func (result v128) (i32x4.neg (i32.const 0))))